--- a/style.css
+++ b/style.css
@@ -1,15 +1,57 @@
 body{
-    background-color: lightsteelblue;
+    background-image: url("cool_background.jpg");
     margin-left: 50px;
     margin-right: 100px;
+    font-family: 'Sansita Swashed', cursive;;
 }
 h1 {
     color: #5f7eaa;
     font-family: Arial, Helvetica, sans-serif;
     font: sans-serif;
+    padding-left: 15px;
    
 }
-.img-me{
-    width: 300px;
 
+.img-me{
+    height: 300px;
+
+
+}
+.topnav {
+    background-color: rgba(0, 0, 0, 0.8);
+    overflow: hidden;
+}
+.topnav a{
+    float: left;
+    color: #8b0000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.topnav a:hover{
+    background-color: #4b0082;
+    color: black;
+}
+.topnav a.activate{
+    background-color: #301934;
+    color: white;
+}
+.box {
+    
+    color: #87ceeb;
+    height: 200px;
+    padding: 50px, 20px;
+    background-color: rgba(0, 0, 0, 0.637);
+}
+.box2{
+    color: #87ceeb;
+    height: 200px;
+    padding: 20px, 20px;
+    background-color: rgba(0, 0, 0, 0.637);
+}
+.img-me-box{
+    padding: 25px 25px;
+    background-color: rgba(0, 0, 0, 0.637);
+   
 }
